--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,3 +5,65 @@
   --text: hsla(0, 0%, 100%, 0.88);
 }
 
+main {
+  margin-top: 150px;
+  margin-bottom: 45px;
+}
+
+/* NAVBAR */
+.navbar-login-btn {
+  margin-top: 5px !important;
+  margin-left: 5px !important;
+  padding: 5px 10px !important;
+  background-color: #748B6F !important;
+  border: none !important;
+  border-radius: 5px !important;
+  color: #31525b !important;
+  cursor: pointer !important;
+  text-emphasis: bold;
+}
+
+.navbar {
+  background-color: #D05663;
+  position: sticky;
+  top: 0;
+  z-index: 1000; 
+  padding-top: 1px !important;
+  padding-bottom: 1px !important;
+}
+
+.nav-link {
+  color: #31525b !important;
+  
+}
+
+.nav-brand {
+  color: #31525b !important;
+}
+
+/* Teacher Page */
+
+.teacher-page-container{
+  display: flex;
+  width: 100%;
+  height: 100vh;
+}
+
+.left-div-teacherpage{
+  background-color: red;
+  flex: 6.5;
+  
+}
+
+.right-div-teacherpage {
+  
+  background-color: blue;
+  flex: 3.5;
+  
+}
+
+.teacher-profile {
+  margin: 10px;
+  padding: 10px;
+  background-color: white;
+}
