--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,11 +3,65 @@
   --header: #fff;
   --link: #61dafb;
   --text: hsla(0, 0%, 100%, 0.88);
+  --primary-font: 'Roboto', sans-serif;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: var(--primary-font);
 }
 
 main {
-  margin-top: 150px;
-  margin-bottom: 45px;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-top: 45px;
+  padding-bottom: 45px;
+  font-family: var(--primary-font);
+}
+
+.heading {
+  color: #2A403D !important;
+  font-family: var(--primary-font) !important;
+  margin-left: 15px !important;
+  font-style: italic !important;
+}
+
+.sub-heading {
+  color: #0d3b46;
+  font-style: italic;
+  margin-left: 25px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.button {
+  margin-top: 5px !important;
+  margin-left: 10px !important;
+  margin-right: 10px !important;
+  padding: 5px 10px !important;
+  background-color: #748B6F !important;
+  border: none !important;
+  border-radius: 5px !important;
+  color: #0d3b46 !important;
+  cursor: pointer !important;
+  font-weight: bolder;
+}
+
+.secondary-button {
+  margin-top: 5px !important;
+  margin-left: 10px !important;
+  margin-right: 10px !important;
+  padding: 5px 10px !important;
+  background-color: #D05663 !important;
+  border: none !important;
+  border-radius: 5px !important;
+  color: #0d3b46 !important;
+  cursor: pointer !important;
+}
+
+.card {
+  background-color: #f6f5f2 !important;
 }
 
 /* NAVBAR */
@@ -18,7 +72,7 @@ main {
   background-color: #748B6F !important;
   border: none !important;
   border-radius: 5px !important;
-  color: #31525b !important;
+  color: #0d3b46 !important;
   cursor: pointer !important;
   text-emphasis: bold;
 }
@@ -33,15 +87,35 @@ main {
 }
 
 .nav-link {
-  color: #31525b !important;
+  color: #0d3b46 !important;
   
 }
 
 .nav-brand {
   color: #31525b !important;
+  margin-right: auto;
+  margin-left: -10px;
+  font-weight: bolder;
+  font-size: larger;
 }
 
+/* Footer */
+.footer {
+  background-color: #748B6F;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 45px;
+  padding: 25px;
+}
+
+
 /* Teacher Page */
+
+.teacher-page {
+  margin-top: 45px;
+  margin-bottom: 45px;
+}
 
 .teacher-page-container{
   display: flex;
@@ -50,20 +124,129 @@ main {
 }
 
 .left-div-teacherpage{
-  background-color: red;
+  background-color: #F8F7F1;
   flex: 6.5;
   
 }
 
 .right-div-teacherpage {
   
-  background-color: blue;
+  background-color: #748B6F;
   flex: 3.5;
   
 }
 
 .teacher-profile {
-  margin: 10px;
+  
+  margin: 30px;
   padding: 10px;
-  background-color: white;
+  border-radius: 5px;
+  background-color: #F8F7F1;
+  font-family: var(--primary-font);
+  color: #0d3b46
+}
+
+.ref-cards {
+  display: flex;
+  justify-content: center;
+  margin-left: 40px;
+  margin-right: 40px;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  padding: 15px;
+  background-color: #f6f5f2;
+  font-family: var(--primary-font);
+  color: #0d3b46
+}
+
+.add-ref-div {
+  margin-left: 50px;
+  margin-bottom: 40px;
+}
+
+
+/* Strategy Page */
+
+.strategy-page {
+  margin-top: 45px;
+  margin-bottom: 45px;
+  background-color: #F8F7F1;
+}
+
+.strat-container {
+  margin: 50px;
+  padding-top: 40px;
+}
+
+.strat-cards {
+  display: flex;
+  justify-content: center;
+  margin-left: 50px;
+  margin-right: 50px;
+  margin-top: 40px;
+  margin-bottom: 20px;
+  padding: 15px;
+  background-color: #f6f5f2;
+  font-family: var(--primary-font);
+  color: #0d3b46
+}
+
+.strat-name  {
+  font-weight: bold !important;
+  padding-bottom: 10px !important;
+  font-family: var(--primary-font) !important;
+  color: #164551 !important;
+}
+
+.strat-description {
+  font-weight: bold !important;
+  font-style: italic;
+  padding-top: 10px !important;
+  padding-bottom: 10px !important;
+  font-family: var(--primary-font) !important;
+  color: #164551 !important;
+}
+
+.strat-instructions {
+  padding-bottom: 10px !important;
+  font-family: var(--primary-font) !important;
+  color: #164551 !important;
+}
+
+/* Signup Page */
+
+.signup {
+  margin-top: 45px;
+  padding-bottom: 300px;
+  background-color: #F8F7F1;
+}
+
+.signup-container {
+  padding-top: 45px;
+}
+
+
+/* Login Page */
+
+.login-page {
+  margin-top: 40px;
+  padding-top: 80px;
+  padding-bottom: 500px;
+  background-color: #F8F7F1;
+}
+
+.signup-loginpage {
+  color: #0d3b46;
+  font-style: italic;
+  padding-left: 115px;
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+
+.login-heading {
+  color: #2A403D !important;
+  font-family: var(--primary-font) !important;
+  margin-left: 15px !important;
+  font-style: italic !important;
+  padding-left: 60px;
 }
